--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
         "husky": "^1.2.1",
         "prettier": "^1.15.3",
         "sketch-module-web-view": "^0.2.6",
-        "pretty-quick": "^1.8.0"
+        "pretty-quick": "^1.8.0",
+        "umi": "^2.1.2",
+        "umi-plugin-react": "^1.1.1"
     }
 }
